# fastdeploy

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Procfile  README.md  commandlines.txt  commands.py  deploy-systemd-hardening.md  justfile  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  todo.txt  uvicorn.sh
.github/: deploy.yml
.github/workflows/: deploy.yml
ansible/: ansible.cfg  deploy-hardened.service  deploy-macmini.yml  deploy.py.template.j2  deploy.service  deploy.traefik.yml  deploy.yml  env.template.j2  fastdeploy_staging_collect.py.template.j2  fastdeploy_staging_config.json.template.j2  fastdeploy_staging_deploy.sh.template.j2  fastdeploy_sudoers.template.j2  hosts.yml.template.j2  secrets.yml  user_config.fish.template.j2
ansible/callback_plugins/: json_cb.py
ansible/inventory/: hosts-macmini.yml  info
ansible/templates/: deploy.macmini.service.j2  deploy.macmini.traefik.j2  env.macmini.j2  fastdeploy-hardened.service.j2
app/: auth.py  config.py  database.py  dependencies.py  deployment.py  filesystem.py  main.py  models.py  tasks.py  websocket.py
app/requirements/: develop.in  develop.txt  production.in  production.txt
app/routers/: deployments.py  services.py  steps.py  tasks.py  users.py
app/tests/: conftest.py  test_auth.py  test_models.py  test_routers.py  test_routers_deployments.py  test_routers_services.py  test_routers_steps.py  test_routers_tasks.py  test_routers_users.py  test_sync_services.py  test_tasks.py  test_websocket.py
backend/: auth.py  connection.py  deployment.py  main.py  models.py  views.py
backend/requirements/: develop.in  develop.txt  production.in  production.txt
backend/tests/: conftest.py  test_auth.py  test_models.py
deploy/: auth.py  bootstrap.py  config.py  database.py  dependencies.py  filesystem.py  main.py  models.py  pydantic_models.py  tasks.py  views.py  websocket.py
deploy/adapters/: filesystem.py  orm.py  repository.py  websocket.py  websocket_eventpublisher.py
deploy/domain/: commands.py  events.py  model.py
deploy/entrypoints/: dependencies.py  fastapi_app.py
deploy/requirements/: develop.in  develop.txt  production.in  production.txt
deploy/routers/: deployments.py  services.py  steps.py
deploy/service_layer/: handlers.py  messagebus.py  unit_of_work.py
deploy/tests/: test_auth.py  test_routers_deployments.py  test_routers_services.py  test_websocket.py
deployments/: cast_hosting.sh  create_lines.py  deploy.py  fastdeploy.sh  fastdeploy_collect.py  fastdeploy_collect_develop.py  fastdeploy_deploy.sh  fastdeploy_deploy_develop.sh  sample.sh
deployments/fastdeploy/: config.json
docs/: about.md  architecture.md  auth.md  cli.md  database.md  deployment.md  domain.md  endpoints.md  er_diagram.md  index.md  requirements.txt  systemd-hardening.md  test-dummy.md
docs/css/: openapi-darkmode-fix.css
docs/security-review/: 01-secrets-environment-variables.md  02-process-isolation-systemd.md  03-jwt-token-security.md  04-remote-deployment-keys.md  05-api-design-issues.md  06-websocket-token-expiry.md  07-concurrency-queuing-strategy.md  08-ansible-integration.md  09-observability-monitoring.md
frontend/: .env.development  .env.production  jest.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.vue  client.ts  converters.ts  main.ts  store.ts  websocket.ts
frontend/tests/: auth.spec.ts  client.spec.ts  (+8 more)
notebooks/: access_token_refactor.ipynb  add_update_steps.ipynb  ansible_result.ipynb  create_user.ipynb  debug_start_deployment.ipynb  deploy_collect_tasks_and_write_service_config.ipynb  deploy_context.ipynb  deploy_database_debug.ipynb  deploy_debug.ipynb  deploy_single_cast_hosting.ipynb  deploy_wordpress.ipynb  deployment_flow.ipynb  httpx_retry_logic.ipynb  in_memory_repo.ipynb  parse_playbook.ipynb  passlib_debug.ipynb  pydantic_coint.ipynb  pytest_database_debug.ipynb  repository_debug.ipynb  resolve.ipynb  rolling_back_session_for_tests.ipynb  routers_services_debug.ipynb  scratch.ipynb  service_deploy_auth.ipynb  service_json.ipynb  sqlalchemy_ddd.ipynb  sqlmodel_debug.ipynb  step_logic.ipynb  sync_services.ipynb  task_debug.ipynb  test_yield.ipynb  websocket_authentication.ipynb
requirements/: develop.txt  production.in  production.txt
scripts/: test_deployment.py  validate-systemd-hardening.sh
tests/: conftest.py
(+106 files in other folders)
