[project]
name = "fastDeploy"
description = "Backend for deploying web applications"
readme = "README.md"
requires-python = ">=3.10,<3.13"  # FIXME: remove upper bound when some async packages support Python 3.13
version = "0.1.2"
authors = []
dependencies = [
    "asyncpg>=0.29.0",
    "bcrypt<=4.2",
    "fastapi[all]>=0.115.2",
    "httpx>=0.27.2",
    "orjson>=3.10.7",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.5.2",
    "pytest-asyncio<0.23",
    "python-jose[cryptography]>=3.3.0",
    "rich>=13.9.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "typer>=0.12.5",
]

[tool.black]
line-length = 119

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
minversion = "6.0"
env = [
    # "DATABASE_URL = sqlite:///:memory:?cache=shared",
    "DATABASE_URL = postgresql+asyncpg:///deploy_test",
    "PASSWORD_HASH_ALGORITHM = ldap_md5",
]
testpaths = "tests"
asyncio_mode = "strict"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "db",
]

[tool.isort]
skip = [".git", "__pycache__", "LC_MESSAGES", "locale", "build", "dist", ".github", "frontend"]
blocked_extensions = ["rst", "html", "js", "svg", "txt", "css", "scss", "png", "snap", "tsx", "sh"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
lines_between_types = 1
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_fastapi = "fastapi"
known_pydantic = "pydantic"
known_sqlalchemy = "sqlalchemy"
known_sqlmodel = "sqlmodel"

[tool.coverage.run]
branch = true
source = ["deploy"]
omit = ["deploy/tests/*"]
command_line = "-m pytest"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.3",
    "honcho>=2.0.0",
    "ipdb>=0.13.13",
    "jupyterlab>=4.2.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.41",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "mypy>=1.12.0",
    "notebook>=7.2.2",
    "pytest",
    "pytest-asyncio<0.24",
    # 0.24 is broken # FIXME: remove when fixed
    "pytest-env",
    "sqlalchemy[mypy]>=2.0.36",
    "types-pyyaml>=6.0.12.20240917",
]
